[package]
name = "polarlight"
version = "0.0.1"
authors = [ "Chris Ohk <utilforever@gmail.com>" ]
edition = "2018"
description = "A Machine Learning Framework for High Performance written in Rust"

readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
